[package]
name = "rust-website"
version = "0.1.0"
authors = ["Leonard Lorenz <dev@leonardlorenz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
actix-web = "*"
actix-files = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"

diesel = { version = "*", default-features = false, features = ["sqlite", "chrono"] }
diesel_codegen = { version = "*", default-features = false }

uuid = { version = "*", features = ["serde", "v5"] }

tera = "*"

openssl = "*"
