[package]
name = "crablog"
version = "0.2.1"
authors = ["Leonard Lorenz <dev@leonardlorenz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
actix-web = "3.2.0"
actix-files = "0.4.0"

serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"

diesel = { version = "1.4.5", default-features = false, features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.1", default-features = false }

uuid = { version = "0.8.1", features = ["serde", "v5"] }

tera = "1.5.0"

once_cell = "1.5.2"
