[package]
name = "crablog"
version = "0.3.1"
authors = ["Leonard Lorenz <dev@leonardlorenz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
actix-web = "3.3.2"
actix-files = "0.4.0"

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "*"
serde_derive = "*"

diesel = { version = "1.4.6", default-features = false, features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.1", default-features = false }

uuid = { version = "0.8.2", features = ["serde", "v5"] }

tera = "1.8.0"

once_cell = "1.7.2"

env_logger = "0.8.3"
